Fixed title and icon alignment

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body > * {
 .profile {
     display: flex;
     align-items: center;
+    margin-bottom: 1em;
 }
 
 .profile .icon {
@@ -28,12 +29,16 @@ body > * {
     background: url("images/icon.png") no-repeat center;
     background-size: 155px auto;
     border-radius: 22.37%;
-    margin: 0 1em 1em 0;
+    margin: 0 1em 0 0;
 }
 
 @media only screen and (max-width: 48em) {
     .profile {
         flex-direction: column;
+    }
+
+    .profile .icon {
+        margin: 0 0 1em 0;
     }
 
     .profile .text {
